--- a/TestForm/TestForm.csproj
+++ b/TestForm/TestForm.csproj
@@ -255,22 +255,22 @@
     <Compile Include="SafeNativeMethods.cs" />
     <Compile Include="ShellContextMenu.cs" />
     <Compile Include="ShellDll\FileSystemWatcher.cs" />
-    <Compile Include="ShellDll\Interfaces\IAdviseSink.cs" />
-    <Compile Include="ShellDll\Interfaces\IContextMenu.cs" />
-    <Compile Include="ShellDll\Interfaces\IDataObject.cs" />
-    <Compile Include="ShellDll\Interfaces\IDragSourceHelper.cs" />
-    <Compile Include="ShellDll\Interfaces\IDropSource.cs" />
-    <Compile Include="ShellDll\Interfaces\IDropTarget.cs" />
-    <Compile Include="ShellDll\Interfaces\IDropTargetHelper.cs" />
-    <Compile Include="ShellDll\Interfaces\IEnumFORMATETC.cs" />
-    <Compile Include="ShellDll\Interfaces\IEnumIDList.cs" />
-    <Compile Include="ShellDll\Interfaces\IEnumSTATSTG.cs" />
-    <Compile Include="ShellDll\Interfaces\IQueryInfo.cs" />
-    <Compile Include="ShellDll\Interfaces\IShellExtInit.cs" />
-    <Compile Include="ShellDll\Interfaces\IShellFolder.cs" />
-    <Compile Include="ShellDll\Interfaces\IStorage.cs" />
-    <Compile Include="ShellDll\Interfaces\IStream.cs" />
-    <Compile Include="ShellDll\PIDL.cs" />
+    <Compile Include="ShellDll\IAdviseSink.cs" />
+    <Compile Include="ShellDll\IContextMenu.cs" />
+    <Compile Include="ShellDll\IDataObject.cs" />
+    <Compile Include="ShellDll\IDragSourceHelper.cs" />
+    <Compile Include="ShellDll\IDropSource.cs" />
+    <Compile Include="ShellDll\IDropTarget.cs" />
+    <Compile Include="ShellDll\IDropTargetHelper.cs" />
+    <Compile Include="ShellDll\IEnumFORMATETC.cs" />
+    <Compile Include="ShellDll\IEnumIDList.cs" />
+    <Compile Include="ShellDll\IEnumSTATSTG.cs" />
+    <Compile Include="ShellDll\IQueryInfo.cs" />
+    <Compile Include="ShellDll\IShellExtInit.cs" />
+    <Compile Include="ShellDll\IShellFolder.cs" />
+    <Compile Include="ShellDll\IStorage.cs" />
+    <Compile Include="ShellDll\IStream.cs" />
+    <Compile Include="ShellDll\Pidl2.cs" />
     <Compile Include="ShellDll\ShellAPI.cs" />
     <Compile Include="ShellDll\ShellBrowser.cs">
       <SubType>Component</SubType>
