--- a/TestForm/TestForm.csproj
+++ b/TestForm/TestForm.csproj
@@ -92,12 +92,12 @@
     <Compile Include="ArchiveUpLink.cs" />
     <Compile Include="RarArchiveNode.cs" />
     <Compile Include="ShellDirectoryNode.cs" />
-    <Compile Include="ShellDll\IShellItem.cs" />
-    <Compile Include="ShellDll\ShellGuids.cs" />
+    <Compile Include="Shell\IShellItem.cs" />
+    <Compile Include="Shell\ShellGuids.cs" />
     <Compile Include="ShellFileNode.cs" />
-    <Compile Include="ShellDll\ShellFile.cs" />
-    <Compile Include="ShellDll\ShellFolder.cs" />
-    <Compile Include="ShellDll\ShellItem.cs" />
+    <Compile Include="Shell\ShellFile.cs" />
+    <Compile Include="Shell\ShellFolder.cs" />
+    <Compile Include="Shell\ShellItem.cs" />
     <Compile Include="Zip7ArchiveNode.cs" />
     <Compile Include="ButtonCommandBar.cs">
       <SubType>UserControl</SubType>
@@ -250,32 +250,32 @@
     </Compile>
     <Compile Include="SafeNativeMethods.cs" />
     <Compile Include="ShellContextMenu.cs" />
-    <Compile Include="ShellDll\FileSystemWatcher.cs" />
-    <Compile Include="ShellDll\IAdviseSink.cs" />
-    <Compile Include="ShellDll\IContextMenu.cs" />
-    <Compile Include="ShellDll\IDataObject.cs" />
-    <Compile Include="ShellDll\IDragSourceHelper.cs" />
-    <Compile Include="ShellDll\IDropSource.cs" />
-    <Compile Include="ShellDll\IDropTarget.cs" />
-    <Compile Include="ShellDll\IDropTargetHelper.cs" />
-    <Compile Include="ShellDll\IEnumFORMATETC.cs" />
-    <Compile Include="ShellDll\IEnumIDList.cs" />
-    <Compile Include="ShellDll\IEnumSTATSTG.cs" />
-    <Compile Include="ShellDll\IQueryInfo.cs" />
-    <Compile Include="ShellDll\IShellExtInit.cs" />
-    <Compile Include="ShellDll\IShellFolder.cs" />
-    <Compile Include="ShellDll\IStorage.cs" />
-    <Compile Include="ShellDll\IStream.cs" />
-    <Compile Include="ShellDll\Pidl.cs" />
-    <Compile Include="ShellDll\NativeMethods.cs" />
-    <Compile Include="ShellDll\ShellBrowser.cs">
+    <Compile Include="Shell\FileSystemWatcher.cs" />
+    <Compile Include="Shell\IAdviseSink.cs" />
+    <Compile Include="Shell\IContextMenu.cs" />
+    <Compile Include="Shell\IDataObject.cs" />
+    <Compile Include="Shell\IDragSourceHelper.cs" />
+    <Compile Include="Shell\IDropSource.cs" />
+    <Compile Include="Shell\IDropTarget.cs" />
+    <Compile Include="Shell\IDropTargetHelper.cs" />
+    <Compile Include="Shell\IEnumFORMATETC.cs" />
+    <Compile Include="Shell\IEnumIDList.cs" />
+    <Compile Include="Shell\IEnumSTATSTG.cs" />
+    <Compile Include="Shell\IQueryInfo.cs" />
+    <Compile Include="Shell\IShellExtInit.cs" />
+    <Compile Include="Shell\IShellFolder.cs" />
+    <Compile Include="Shell\IStorage.cs" />
+    <Compile Include="Shell\IStream.cs" />
+    <Compile Include="Shell\Pidl.cs" />
+    <Compile Include="Shell\NativeMethods.cs" />
+    <Compile Include="Shell\ShellBrowser.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="ShellDll\ShellBrowserUpdater.cs" />
-    <Compile Include="ShellDll\ShellHelper.cs" />
-    <Compile Include="ShellDll\ShellImageList.cs" />
-    <Compile Include="ShellDll\ShellNode.cs" />
-    <Compile Include="ShellDll\SpecialFolders.cs" />
+    <Compile Include="Shell\ShellBrowserUpdater.cs" />
+    <Compile Include="Shell\ShellHelper.cs" />
+    <Compile Include="Shell\ShellImageList.cs" />
+    <Compile Include="Shell\ShellNode.cs" />
+    <Compile Include="Shell\SpecialFolders.cs" />
     <Compile Include="ThumbnailCreator.cs" />
     <Compile Include="UpLink.cs" />
     <Compile Include="Utility\ContextMenuHelper.cs" />
